Updated with the final links!

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <h1 style="color:white; font-size:30px;">References:</h1>
                 <h2 style="color:white; font-size:15px;">Github Link:</h2>
                 <ul style="color:white; font-size:15px;">
-                    <li><a style="color:white; font-size:15px;" href='https://github.com/Richag2/Richag2.github.io' target='_blank'>CS416 Data Visualization project</a></li>
+                    <li><a style="color:white; font-size:15px;" href='https://github.com/Richag2/DrugOverdoseDeathsInUS' target='_blank'>CS416 Data Visualization project</a></li>
                 </ul>
                 <h2 style="color:white; font-size:15px;">Dataset Link:</h2>
                 <ul style="color:white; font-size:15px;">
@@ -118,7 +118,7 @@
                 </ul>
                 <h2 style="color:white; font-size:15px;">URL:</h2>
                 <ul style="color:white; font-size:15px;">
-                    <li><a style="color:white; font-size:15px;" href='https://richag2.github.io/' target='_blank'>Drug Overdose Deaths Visualization URL</a></li>
+                    <li><a style="color:white; font-size:15px;" href='https://richag2.github.io/DrugOverdoseDeathsInUS/' target='_blank'>Drug Overdose Deaths Visualization URL</a></li>
                 </ul>
 
                 <h2 style="color:white; font-size:15px;">Charts:</h2>
